--- a/GM/package.json
+++ b/GM/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "boostrap": "^2.0.0",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "jquery-ui-dist": "^1.12.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
